fixing scroll overflow

--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -55,7 +55,7 @@ li {
    flex-direction: row;
    justify-content: space-between;
    overflow-x: scroll;
-   flex-wrap: wrap;
+   /* flex-wrap: wrap; */
 }
  .book-card {
    height: 450px;
